<resources>
    <string name="app_name">QuickCash</string>
    <string name="fileProviderText">com.codepath.fileprovider.QuickCash</string>
    <string name="app_name_cap">QuickCash</string>
    <string name="app_name_ft">FirstRun</string>
    <string name="welcome">Welcome to QuickCash!</string>

    <string name="login">Log into QuickCash</string>
    <string name="sign_up">New User? Sign up here!</string>
    <string name="la_username">Enter Username: </string>
    <string name="la_password">Enter Password: </string>
    <string name="sa_enterU">Enter New Username: </string>
    <string name="sa_enterP">Enter New Password: </string>
    <string name="sign_up_text">Sign up for QuickCash</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ComposeFragmentSample">Hello compose fragment </string>
    <string name="HomeFragmentSample">Hello home fragment </string>
    <string name="MyJobsFragmentSample">Hello myjobs fragment </string>
    <string name="ProfileFragmentSample">Hello my profile fragment </string>
    <string name="SearchFragmentSample">Hello search fragment </string>
    <string name="ComposeTitle">Compose Job</string>

    <!-- Item Job sample views -->
    <string name="ij_sampleAddress">123 Apple St, Charlotte NC, 28206</string>
    <string name="ij_postedID">Posted by</string>
    <string name="ij_sampleDateAgo">4 hr ago</string>
    <string name="ij_amountID">Amount:</string>
    <string name="ij_descriptionID">Description</string>
    <string name="ij_samplePrice">$30</string>
    <string name="ij_sampleDate">12 Jul 2020</string>
    <string name="ij_addressID">Address: </string>
    <string name="ij_sampleDescription"> Here is my description</string>

    <string name="notification">Notifications</string>
    <string name="notif_info">This is where your notifications will appear.</string>
    <string name="notif_suc">Notification was submitted</string>
    <string name="notif_req"> has sent a request for your job: </string>

    <string name="return_now">return</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_text">Are you sure you want to log out?</string>

    <!-- Compose Fragment static strings-->
    <string name="CF_nameID">Enter Job Name Here:</string>
    <string name="CF_descriptionID">Enter Job Description Here:</string>
    <string name="CF_dateID">Enter Job Date Here:</string>
    <string name="CF_timeID">Enter Job Time Here:</string>
    <string name="CF_addressID">Enter Job Address Here:</string>
    <string name="CF_priceID">Enter Job Price Here:</string>
    <string name="CF_imageID">(Optional: Place an image)</string>
    <string name="CF_composeJobID">Compose Job</string>
    <string name="CF_takeImageID">Upload Image</string>

    <!-- MyJobs Fragment static strings -->
    <string name="mjf_text">This is where your jobs assigned will be.</string>

    <!--Profile Fragment static strings -->
    <string name="pf_pending">Pending</string>
    <string name="pf_completed">Completed</string>
    <!--ToDoJobDetailsActivity static strings -->
    <string name="tododa_change">I can no longer do this</string>
    <string name="tododa_done">I am done!</string>
    <string name="tododa_leave">Leave this job</string>
    <string name="tododa_leave_text">Are you sure you can no longer do</string>
    <!--Profile Fragment/Activity -->
    <string name="sample_phone_number">(111)222-3333</string>


    <!-- Job Details Activity -->
    <string name="JDA_requestID">Submit Request Here:</string>
    <string name="JDA_sendReq">Send Request</string>
    <string name="JDA_sampleReq">I would be happy to do this job.</string>
    <string name="JDA_reqIsSent">Request has been submitted</string>
    <string name="JDA_my_req_edit">Edit Request</string>
    <string name="JDA_my_req_del">Delete Request</string>

    <!--My Job Details Activity -->
    <string name="MJDA_delete">Delete this Job</string>
    <string name="MJDA_delete_info">Are you sure you want to delete this job?</string>
    <string name="MJDA_yes">Yes</string>
    <string name="MJDA_no">No</string>
    <string name="MJDA_status">FINISHED</string>
    <string name="requestCount_1">You have</string>
    <string name="requestCount_2">requests.</string>
    <string name="requestQSuccess">Successful on getting requests</string>
    <string name="requestQError">Issues with getting requests.</string>
    <string name="jobDelConfirm">Job has been deleted.</string>

    <!-- JDA Messages -->
    <string name="JDA_fill">Please fill in the comment</string>
    <string name="JDA_call_success"></string>
    <string name="JDA_call_failure"></string>
    <string name="JDA_request_sucess">Request was succesful</string>
    <string name="JDA_request_failure">Error while creating request.</string>
    <string name="JDA_request_toast">Request has been submitted</string>
    <string name="JDA_job_request_arr_error">Error adding job to requests array</string>
    <string name="JDA_job_request_arr">Request now in this job array.</string>
    <string name="JDA_edit">EDIT</string>
    <string name="JDA_edit_cancel">RETURN</string>
    <string name="JDA_edit_req">Edit My Request</string>
    <string name="JDA_edit_req_success">Request was successfully edited</string>

    <!--MJDA Messages -->
    <string name="MJDA_delete_reqs_success">Deleted this request.</string>
    <string name="MJDA_delete_reqs_failure">Error deleting this request: </string>
    <string name="MJDA_delete_job_array_sucess">Job is no longer in array.</string>
    <string name="MJDA_delete_job_array_failure">Error deleting job from the array.</string>
    <string name="MJDA_delete_job_success">Successfully deleted this job.</string>
    <string name="MJDA_delete_job_error">Error deleting this job from DB.</string>

    <!-- Request Details Activity static strings -->
    <string name="RDA_moreinfo">Want to chat?</string>
    <string name="RDA_approve">Approve</string>
    <string name="RDA_deny">Deny</string>
    <string name="rda_deny_con">Are you sure you want to deny </string>
    <string name="rda_yes">Yes</string>
    <string name="rda_no">No</string>
    <string name="extra_text">...</string>

    <!-- Log static strings -->
    <string name="jobdetailOnClick">Load job details for </string>

    <string name="SF_rg">Filter by: </string>
    <string name="SF_rb_all">All</string>
    <string name="SF_rb_pop">Popularity</string>
    <string name="SF_rb_loc">Location</string>
    <string name="SF_rb_pri">Price</string>

    <!-- transition names -->
    <string name="tr_request_image">request_image</string>
    <string name="tr_job_image">job_image</string>
    <string name="tr_request_name">request_name</string>
    <string name="dismiss">Dismiss</string>
    <string name="notif_finish">"has finished your job: "</string>
    <string name="notif_approv">"has approved you to do: "</string>
    <string name="delete">Delete</string>

    <string name="JDA_my_req_del_info">Are you sure you to delete your request?</string>
    <string name="JDA_del_req_arr">Deleted request from the job array</string>
    <string name="JDA_del_req">Successfully delete the request from DB</string>
    <string name="JDA_del_req_conf">You have deleted your request</string>
    <string name="map_activity">Map</string>
    <string name="my_location">MY LOCATION</string>
    <string name="CF_selectID">Choose from Library</string>
    <string name="cf_select_error">Picture wasn\'t selected!</string>
    <string name="take_photo_error">Picture wasn\'t taken!</string>
    <string name="sa_enterE">Enter Email:</string>
    <string name="sa_enterPh">Enter Phone Number:</string>
    <string name="sa_enterAll">Please enter all information.</string>
    <string name="sa_email_valid"><![CDATA[^[a-zA-Z0-9.!#$%&\'*+/=?^_`{|}~-]+@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$]]></string>
    <string name="sa_phone_valid">(0/91)?[7-9][0-9]{9}</string>
    <string name="sa_get_valid">Please enter a valid email or phone.</string>
    <string name="sample_email">quickcash123@email.com</string>
    <string name="PA_no_phone">No Phone Number</string>
    <string name="PA_no_email">No email provided</string>
    <string name="friends">Friends</string>
    <string name="tododa_request_pay">Request Payment</string>
    <string name="tododa_request_pay_success">Successfully requested a payment.</string>
    <string name="todo_request_pay_reminder">Payment already requested.</string>
    <string name="notif_pay">"is requesting payment for: "</string>
    <string name="payment_req_sent">Payment has been submitted.</string>
    <string name="payments">Payments</string>
    <string name="pay_activity_recieve">Pending</string>
    <string name="pay_activity_paying">Paying</string>
    <string name="pda_pay_user">Pay User</string>
    <string name="user_since">User Since:</string>
    <string name="search_hint">Search Here:</string>
    <string name="tr_job_name">job_name</string>
    <string name="tr_job_price">job_price</string>
    <string name="tr_job_date">job_date</string>
    <string name="tr_job_creator">job_creator</string>
    <string name="cf_date_picker">onDateSet date: mm/dd/yyyy:</string>
    <string name="todo_job_leave">You have left this job.</string>
    <string name="la_facebook_fail">Uh oh. User exited facebook login.</string>
    <string name="la_facebook_new_user">User signed up and logged in through Facebook!</string>
    <string name="la_facebook_al_sign_in">User logged in through Facebook!</string>
    <string name="attempt_log">Attempting to log in.</string>
    <string name="issue_login">Issue with login</string>
    <string name="login_failed">Login failed. Try Again</string>
    <string name="login_sucess">Success!</string>
    <string name="login_fb_sucess">Logged in via Facebook.</string>
    <string name="tr_profile">profile_item</string>
    <string name="tr_profile_pic">profile_pic</string>
    <string name="tr_toolbar">toolbar_tr</string>
    <string name="la_twitter_login">Sign in with Twitter</string>
    <string name="tw_us_suc">new Twitter user update username</string>
    <string name="twitter_login_fail">Can\'t update twitter un</string>
</resources>