<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_main"
        android:icon="@drawable/gmapslogo"
        android:title="@string/map_activity"
        app:showAsAction="always" />
    <item
        android:id="@+id/notifications_main"
        android:icon="@drawable/icon_message"
        android:title="@string/notification"
        android:actionLayout="@layout/icon_notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/payments_main"
        android:icon="@drawable/icon_pay"
        app:showAsAction="always"
        android:title="@string/payments"/>

    <item
        android:id="@+id/friends_main"
        android:icon="@drawable/icon_friends"
        android:title="@string/friends"
        app:showAsAction="always"/>

    <item
        android:id="@+id/sign_out_main"
        android:title="@string/sign_out"
        app:showAsAction="always"
        android:icon="@drawable/icon_sign_out"/>
</menu>