<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_request_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestDetailsActivity">

    <include
        android:id="@+id/toolbar_ARD"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_requestor_PP"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/tr_request_image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_requestor_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="124dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:transitionName="@string/tr_request_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/iv_requestor_PP"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_request_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="116dp"
        android:text="@string/CF_descriptionID"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_requestor_PP" />

    <Button
        android:id="@+id/btn_request_approve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:text="@string/RDA_approve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_comment" />

    <Button
        android:id="@+id/btn_request_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:background="#F44336"
        android:text="@string/RDA_deny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_comment" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="163dp"
        android:background="#03A9F4"
        android:text="@string/RDA_moreinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_comment" />

</androidx.constraintlayout.widget.ConstraintLayout>