<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/cf_padding"
    tools:context=".fragments.ComposeFragment">

    <TextView
        android:id="@+id/cf_composeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ComposeTitle"
        android:textColor="@color/myAppAltColor"
        android:textSize="@dimen/compose_fragment_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cf_nameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CF_nameID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cf_composeID">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="@dimen/cf_name_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cf_et_text_size"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cf_descriptionTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CF_descriptionID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_nameTIL" >

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cf_et_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cf_dateTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CF_dateID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_descriptionTIL" >

        <EditText
            android:id="@+id/et_date"
            android:layout_width="@dimen/cf_picker_width"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:textSize="@dimen/cf_et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cf_timeTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CF_timeID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_descriptionTIL" >

        <EditText
            android:id="@+id/et_time"
            android:layout_width="@dimen/cf_picker_width"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:textSize="@dimen/cf_et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cf_addressTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CF_addressID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_dateTIL" >

        <EditText
            android:id="@+id/et_address"
            android:layout_width="@dimen/cf_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cf_et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cf_priceTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CF_priceID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_addressTIL" >

        <EditText
            android:id="@+id/et_price"
            android:layout_width="@dimen/cf_other_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cf_et_text_size"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_composeJob"
        android:layout_width="@dimen/compose_button_width"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/CF_composeJobID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_optionImage" />

    <TextView
        android:id="@+id/cf_imageID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cf_padding"
        android:text="@string/CF_imageID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_priceTIL" />

    <ImageView
        android:id="@+id/iv_optionImage"
        android:layout_width="@dimen/cf_iv_width"
        android:layout_height="@dimen/cf_iv_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_takeJobPic"
        app:srcCompat="@drawable/logoname" />

    <Button
        android:id="@+id/btn_takeJobPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CF_takeImageID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cf_imageID" />

</androidx.constraintlayout.widget.ConstraintLayout>